public interface AdvancedFileReader {
    void readJpg(String fileName);

    void readPng(String fileName);
}
