public interface FileReader {
    void read ( String fileType, String  fileName);
}
