public class ReaderPng implements AdvancedFileReader{

    @Override
    public void readPng(String fileName) {
        System.out.println("Read png file: "+ fileName);
    }

    @Override
    public void readJpg(String fileName) {

    }
}
